DuPont DevSB/src/objects/Business_Partner__c.object
<CustomObject>
    <description>Business Partners are DuPont sites or contracted companies who are supply-chain partners with DuPont.   Business Partners can be a DuPont location or Customer manufacturing site, a Distributor, a warehouse, a carrier or a combination.    
This object is used corporately as a look-up for company sites related to a Case 
(i.e. Ship-point, Carrier, Manufacturing site).</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migration_DB_ID__c</fullName>
        <label>Migration DB ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Country__c</fullName>
        <description>Identifies location of a Business Partner office or plant site</description>
        <label>Partner_Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Region__c</fullName>
        <description>identifies region in which a partner office or plant site is located</description>
        <label>Partner Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>DEC-PG</fullName>
                </value>
                <value>
                    <fullName>DEC-PVFM</fullName>
                </value>
                <value>
                    <fullName>DPM</fullName>
                </value>
                <value>
                    <fullName>DPT</fullName>
                </value>
                <value>
                    <fullName>P&amp;IP ECP</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <description>This is a subtype of Type of Business Partner</description>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>VMI Distributor</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of business partner</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Converter</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>DuPont Site</fullName>
                </value>
                <value>
                    <fullName>Lab Name</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Business Partner</label>
    <listViews>
        <fullName>AllBusinessPartners</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Program__c</columns>
        <columns>Partner_Region__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Business Partners</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DPT_Business_Partners</fullName>
        <columns>NAME</columns>
        <columns>Partner_Country__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>Program__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Partner__c.DPT_Business_Partner_Case_Management</value>
        </filters>
        <label>DPT Business Partners</label>
        <language>en_US</language>
        <sharedTo>
            <role>DPTAP</role>
            <role>DPTEMEA</role>
            <role>DPTLA</role>
            <role>DPTNA</role>
            <role>DuPontProtectionTechnologies</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Business Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Partners</pluralLabel>
    <recordTypes>
        <fullName>CPC_Actives</fullName>
        <active>false</active>
        <description>Crop Protection Anti Counterfeiting Records</description>
        <label>CPC Actives</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPC_Sample_Analysis_Laboratories</fullName>
        <active>false</active>
        <description>Crop Protection Anti Counterfeiting Third Party Labs</description>
        <label>CPC Sample Analysis Laboratories</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPC_US_Distributor</fullName>
        <active>false</active>
        <description>Crop Protection US Distributor</description>
        <label>CPC US Distributor</label>
    </recordTypes>
    <recordTypes>
        <fullName>ComplaintManager</fullName>
        <active>true</active>
        <description>Business Partners for Complaint Handling - Carriers - DuPont Sites - Partner Sites</description>
        <label>Complaint Manager</label>
    </recordTypes>
    <recordTypes>
        <fullName>DPT_Business_Partner_Case_Management</fullName>
        <active>true</active>
        <description>DPT Business Partner record type for Case Mgmt</description>
        <label>DPT Business Partner Case Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distributor</fullName>
        <active>false</active>
        <description>Document the profile of a distributor</description>
        <label>Distributor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>